# yandex_village_bot

./: .gitignore  Dockerfile  alembic.ini  job.nomad.hcl  pyproject.toml  run.py
.github/workflows/: deploy-ci.yml
media/: media_map.json
migrations/: README  env.py
migrations/versions/: 1755158531_b83cb0f2b8e1_initial_migration.py  1755159341_8e0e75162540_initial_migration.py  1755243509_ad48ff8ae2b8_idx.py  1755763164_1cf6e624c3bc_answer.py  1755785510_2cc05e8ca1c8_wardrobe.py  1755785687_16091c7f4ec3_wardrobe_ticket.py
scripts/: create-app.py
scripts/wardrobe/: generator.py
src/: app.py
src/apps/: router.py
src/apps/user/: models.py  repository.py  schemas.py  service.py
src/core/: dependencies.py  exceptions.py  filters.py  model.py  openapi.py  repository.py  response.py  schema.py  service.py  settings.py  validators.py
src/db/: context.py  manager.py
src/integrations/: s3_client.py
src/integrations/http/: auth.py  client.py  context.py
src/integrations/redis/: client.py
src/middleware/: cors.py  exceptions.py  logging.py  monitoring.py  pagination.py
src/scheduler/: app.py
src/scheduler/groups/: service.py  test.py
src/scheduler/groups/belgrad/: day_22_08.py
src/scheduler/groups/moscow/: _15_08.py  _18_08.py  day_15_08.py  day_18_08.py  day_19_08.py  day_20_08.py  day_21_08.py  day_22_08.py
src/tgbot/: app.py  commands.py  filters.py  formatter.py  middlewares.py  router.py  utils.py
src/tgbot/handlers/: activity.py  answer.py  chronicle.py  help.py  main.py  map.py  program.py  start.py  transfer.py  wardrobe.py  welcome.py
src/tgbot/localization/: data.py  manager.py
src/tgbot/services/: media_collector.py
src/utils/: discovery.py
